--- a/my_web_app/pubspec.yaml
+++ b/my_web_app/pubspec.yaml
@@ -58,6 +58,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+  - images/ひマッチ@4x-100.jpg
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
