--- a/my_web_app/pubspec.yaml
+++ b/my_web_app/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
 
   assets:
   - images/ひマッチ@4x-100.jpg
+  
+  - images/mob.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
