homepageの編集とappbarにログアウトボタンを追加

--- a/my_web_app/pubspec.yaml
+++ b/my_web_app/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
   - images/ひマッチ@4x-100.jpg
   - images/mob.png
+  - images/ひマッチ@4x.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
