yamlファイルのasset変更

--- a/my_web_app/pubspec.yaml
+++ b/my_web_app/pubspec.yaml
@@ -61,9 +61,7 @@ flutter:
   uses-material-design: true
 
   assets:
-  - images/ひマッチ@4x-100.jpg
-  - images/mob.png
-  - images/ひマッチ@4x.png
+  - images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
