--- a/my_web_app/pubspec.yaml
+++ b/my_web_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
